# PY-GATE

./: .gitignore  Pipfile  README.md  analyze.ipynb  main.py  materials.db  phantom.py  pyproject.toml
phantom/: hollow_rode.py
uhrgeom/: detector.py
utils/: __init__.py
